# pman

./: Cargo.toml  README.md
src/: app.rs
src/actions/: action.rs
src/components/: buffer_picker.rs  command_palette.rs  file_picker.rs  session_picker.rs  worktree_picker.rs
src/tui/: event.rs
